tests/health/tests__lsp__return_label_completion_test.toit.gold
tests/lsp/return_label_completion_test.toit:16:12: error: Unresolved label 'foo'
  continue.foo
           ^~~
